# curatorchan

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  config.json  curatorchan.drawio  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  recsys.drawio
curatorchan/: main.py
curatorchan/bot/: main.py  recommend_cog.py  settings.py
notebooks/: clean_data.ipynb  process_user.ipynb  view_data.ipynb
scripts/: fetch_data.py  test_api.py
src/curatorchan/: __init__.py  settings.py
