[project]
name = "curatorchan"
version = "0.1.0"
description = ""
authors = [{ name = "Oliver Harcourt", email = "96662442+oliverharcourt@users.noreply.github.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "discord-py>=2.4.0,<3",
    "python-dotenv>=1.0.1,<2",
    "anime-recommender",
]

[tool.uv]

[tool.uv.sources]
anime-recommender = { path = "curatorchan/anime-recommender", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
