[project]
name = "curatorchan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oliver Harcourt", email = "96662442+oliverharcourt@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
curatorchan = "curatorchan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
